# lazyspotify

./: README.md  notes.txt  pyproject.toml  requirements.txt
lazyspotify/: __init__.py  __main__.py  client.py  config.py  ui.py
lazyspotify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
