[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyspotify"
version = "0.1.0"
description = "A lazygit-style terminal UI for Spotify"
requires-python = ">=3.9"
dependencies = [
    "spotipy>=2.23.0",
]

[project.scripts]
lazyspotify = "lazyspotify.__main__:main"

[tool.setuptools]
packages = ["lazyspotify"]
